@@ -1,32 +1,16 @@
 package app.metrodelay.server.status.cz.prg.dpp;
 
-import static app.metrodelay.server.status.ServiceStatus.*;
-
 import java.io.InputStream;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.nio.charset.Charset;
 import java.util.ArrayList;
-import java.util.Calendar;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
 import jakarta.xml.bind.JAXBElement;
-import javax.xml.stream.XMLInputFactory;
-import javax.xml.stream.XMLStreamException;
-import javax.xml.stream.XMLStreamReader;
 
-import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.w3c.dom.CharacterData;
-import org.w3c.dom.DOMException;
-import org.w3c.dom.Element;
 
-import app.metrodelay.server.status.ServiceStatus;
 import app.metrodelay.server.status.StatusUpdate;
 import app.metrodelay.server.status.StatusUpdateException;
 import app.metrodelay.server.status.StatusUpdateImpl;
@@ -40,6 +24,8 @@ import java.util.Objects;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import app.metrodelay.server.status.OperatorStatusUpdates;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 public class DppStatusUpdates implements OperatorStatusUpdates{
 
@@ -66,11 +52,8 @@ public class DppStatusUpdates implements OperatorStatusUpdates{
 
   private StatusUpdate parseStatusUpdate(RssItem rss) throws StatusUpdateException {
     String title = null;
-    String description = null;
     String type = null;
-    Collection<String> lines = new ArrayList<String>();
-    Calendar startAt, finishAt, expectedFinishAt;
-    URL infoReference = null;
+    URI link = null;
     UUID uuid = null;
     List<Object> attrs = rss.getTitleOrDescriptionOrLink();
     for (Object attr : attrs) {
@@ -100,20 +83,13 @@ public class DppStatusUpdates implements OperatorStatusUpdates{
               l.info("Item's title is empty.");
             }
             break;
-          case ":description":
-            l.debug("Processing description");
-            description = StringUtils.trim(value.toString());
-            if (StringUtils.isEmpty(description)) {
-              l.debug("Item's description is empty.");
-            }
-            break;
           case ":link":
-            String link = value.toString();
-            if (StringUtils.isNotEmpty(link)) {
+            String linkValue = value.toString();
+            if (StringUtils.isNotEmpty(linkValue)) {
               try {
-                infoReference = new URL(link);
-              } catch (MalformedURLException e1) {
-                l.warn("Unable to parse link [{}]", link);
+                link = new URI(linkValue);
+              } catch (URISyntaxException e1) {
+                l.warn("Unable to parse link [{}]", linkValue);
               }
             }
             break;
@@ -121,228 +97,16 @@ public class DppStatusUpdates implements OperatorStatusUpdates{
             l.debug("unable to parse [{}]", name);
           }
         }
-      } else if (attr instanceof Element) {
-        Element element = (Element) attr;
-        String name = element.getLocalName();
-        switch (name) {
-        case "content_encoded":
-          l.debug("Processing content_encoded");
-          CharacterData text = (CharacterData) element.getFirstChild();
-          try {
-            Content c = parseContent(text.getData());
-            lines.addAll(c.getLines());
-            type = c.getEmergencyType();
-          } catch (DOMException | XMLStreamException e) {
-            l.warn("Unable to parse RSS Item Content Data", e);
-            l.debug("[{}]", text);
-          }
-          break;
-        default:
-          l.debug("unable to parse [{}]", name);
-        }
       }
     }
     if (uuid == null) {
       l.warn("GUID is null, generating spare UUID.");
-      uuid = UuidGenerator.generate(Stream.of(Objects.toString(title), Objects.toString(type), Objects.toString(lines)).collect(Collectors.joining()));
+      uuid = UuidGenerator.generate(Stream.of(Objects.toString(title), Objects.toString(type)).collect(Collectors.joining()));
       l.info("Generated UUID [{}]", uuid.toString());
     }
-    StatusUpdate update = new StatusUpdateImpl(uuid, title, description, type, lines, infoReference);
+    var update = new StatusUpdateImpl(uuid, title, link);
     l.debug("StatusUpdate [{}]", update);
     return update;
-  }
-
-  private Content parseContent(String xmlContent) throws XMLStreamException {
-    l.debug("parseContent:: Parsing content_encoded element.");
-    Content content = new Content();
-    StringBuilder xml = new StringBuilder();
-    xml.append("<content>").append(xmlContent).append("</content>");
-    XMLInputFactory f = XMLInputFactory.newInstance();
-    XMLStreamReader r = f.createXMLStreamReader(IOUtils.toInputStream(xml.toString(), Charset.forName("UTF-8")));
-    if (r.hasNext()) {
-      r.next();
-      if (r.isStartElement()) {
-        String rootElementName = r.getName().getLocalPart();
-        l.trace("parseContent:: Root Start Element [{}]", rootElementName);
-        if ("content".equals(rootElementName)) {
-          int depth = 0;
-          while (r.hasNext() && depth >= 0) {
-            r.next();
-            if (r.isStartElement()) {
-              depth++;
-              String name = r.getName().getLocalPart();
-              switch (name) {
-              case "emergency_types":
-                // Provoz omezen, Zpoždění spojů, Provoz zastaven
-                l.trace("parseContent:: Parsing emergency types.");
-                content.setEmergencyType(r.getElementText());
-                break;
-              case "time_start":
-                l.trace("parseContent:: Parsing start time.");
-                content.setStart(parseTimeStart());
-                break;
-              case "time_stop":
-                l.trace("parseContent:: Parsing stop time.");
-                content.setStop(parseTimeStop());
-                break;
-              case "time_final_stop":
-                l.trace("parseContent:: Parsing final stop time.");
-                content.setFinalStop(parseTimeFinalStop());
-                break;
-              case "integrated_rescue_system":
-                l.trace("parseContent:: Parsing integrated rescue system involved.");
-                // do nothing
-                break;
-              case "aff_line_types":
-                l.trace("parseContent:: Parsing line types.");
-                // do nothing
-                break;
-              case "aff_lines":
-                l.trace("parseContent:: Parsing affected lines.");
-                content.setLines(parseAffectedLines(r.getElementText()));
-                break;
-              default:
-                l.info("parseContent(): Unsupported content type [{}]", name);
-              }
-            }
-          }
-        }
-      }
-    }
-    return content;
-  }
-
-  private String parseSection() {
-
-    String section = null;
-
-    return section;
-  }
-
-  private String parseEmergencyType() {
-    String type = null;
-
-    return type;
-  }
-
-  private String parseTimeStart() {
-    String start = null;
-
-    return start;
-  }
-
-  private String parseTimeStop() {
-    String stop = null;
-
-    return stop;
-  }
-
-  private String parseTimeFinalStop() {
-    String finalStop = null;
-
-    return finalStop;
-  }
-
-  private Collection<String> parseAffectedLines(String linesStr) {
-    l.debug("parseAffectedLines:: Parsing lines [{}]", linesStr);
-    List<String> lines = new ArrayList<String>();
-    if (linesStr != null && linesStr.trim().length() > 0) {
-      String[] rawLines = linesStr.split(",");
-      for (String l : rawLines) {
-        lines.add(l.trim());
-      }
-    }
-    return Collections.unmodifiableCollection(lines);
-  }
-  
-  private ServiceStatus serviceStatus(String status){
-    ServiceStatus service;
-    switch (status){
-    case "Provoz omezen": service = CLOSED; break;
-    case "Provoz zastaven, zavedena NAD": service = CLOSED; break;
-    case "Provoz zastaven": service = CLOSED; break;
-    case "Ostatní": service = IGNORE; break;
-    case "Zpoždění spojů": service = DELAY; break;
-      default: service = NOT_AVAILABLE;
-    }
-    return service;
-  }
-
-  private static class Content {
-    private String section;
-    private String emergencyType;
-    private String start;
-    private String stop;
-    private String finalStop;
-    private String integratedRescueSystem;
-    private List<String> lineTypes;
-    private Collection<String> lines = Collections.<String>emptyList();
-
-    public String getSection() {
-      return section;
-    }
-
-    public void setSection(String section) {
-      this.section = section;
-    }
-
-    public String getEmergencyType() {
-      return emergencyType;
-    }
-
-    public void setEmergencyType(String emergencyType) {
-      this.emergencyType = emergencyType;
-    }
-
-    public String getStart() {
-      return start;
-    }
-
-    public void setStart(String start) {
-      this.start = start;
-    }
-
-    public String getStop() {
-      return stop;
-    }
-
-    public void setStop(String stop) {
-      this.stop = stop;
-    }
-
-    public String getFinalStop() {
-      return finalStop;
-    }
-
-    public void setFinalStop(String finalStop) {
-      this.finalStop = finalStop;
-    }
-
-    public String getIntegratedRescueSystem() {
-      return integratedRescueSystem;
-    }
-
-    public void setIntegratedRescueSystem(String integratedRescueSystem) {
-      this.integratedRescueSystem = integratedRescueSystem;
-    }
-
-    public List<String> getLineTypes() {
-      return lineTypes;
-    }
-
-    public void setLineTypes(List<String> lineTypes) {
-      this.lineTypes = lineTypes;
-    }
-
-    public Collection<String> getLines() {
-      return lines;
-    }
-
-    public void setLines(Collection<String> lines) {
-      this.lines = new ArrayList<>();
-      this.lines.addAll(lines);
-    }
-
   }
 
 }
